--- a/view/components/admin/plans/plans.html
+++ b/view/components/admin/plans/plans.html
@@ -4,7 +4,7 @@
     { id:'edit_plan', title: labels.edit, component: 'subscriptions::admin.plans.edit', icon: 'edit' }
 ] %}
 
-{{  component('components:tabs.vertical',{ 
+{{  component('semantic~tabs.vertical',{ 
         items: items, 
         menu: { id: 'subscription_plan_menu' }, 
         item_class: 'subscription-plan-item',
