--- a/view/components/admin/plans/view/rows/rows.html
+++ b/view/components/admin/plans/view/rows/rows.html
@@ -25,7 +25,7 @@
             {% endif %}           
         </td>
         <td>
-            {{  component('components:status.dropdown',{ 
+            {{  component('semantic~status.dropdown',{ 
                     status: item.status,
                     uuid: item.uuid,
                     skip: [2,3,4,5] 
