--- a/view/components/admin/plans/view/view.html
+++ b/view/components/admin/plans/view/view.html
@@ -1,6 +1,6 @@
 <div class="ui stackable text menu">
     <div class="item right floated">       
-        {{ component('components:paginator.dropdown',{ namespace: 'subscription-plans' }) }}
+        {{ component('semantic~paginator.dropdown',{ namespace: 'subscription-plans' }) }}
     </div>
 </div>
 <div class="mt-8">
@@ -21,6 +21,6 @@
         </tbody>
     </table> 
     <div id="paginator">      
-        {{ component("components:paginator",{ namespace: 'subscription-plans' }) }}
+        {{ component("semantic~paginator",{ namespace: 'subscription-plans' }) }}
     </div>
 </div>
