--- a/view/components/admin/provider/create/create.html
+++ b/view/components/admin/provider/create/create.html
@@ -1,4 +1,4 @@
-{{ component('components:segment-title',{ title: title, icon: 'plus' }) }}
+{{ component('semantic~segment-title',{ title: title, icon: 'plus' }) }}
 {% set plan = createModel('SubscriptionPlans','subscriptions').findById(uuid) %}
 <div class="mt-4">
     <table class="ui definition very basic table">
