--- a/view/components/admin/settings/driver/driver.html
+++ b/view/components/admin/settings/driver/driver.html
@@ -1,4 +1,4 @@
-{% component 'components:tabs.vertical.content' %}
+{% component 'semantic~tabs.vertical.content' %}
 {% set current = getOption('subscriptions.driver') %}
 <div class="mt-4">
     <div class="ui segment">
