--- a/view/components/admin/settings/ipn/ipn.html
+++ b/view/components/admin/settings/ipn/ipn.html
@@ -1,4 +1,4 @@
-{% component 'components:tabs.vertical.content' %}
+{% component 'semantic~tabs.vertical.content' %}
 {% set save_ipn_data = getOption('subscriptions.ipn.logs') %}
 {% set driver_name = getOption('subscriptions.driver') %}
 {% set driver = service('driver').create(driver_name) %}
