--- a/view/components/admin/subscriptions/details/details.html
+++ b/view/components/admin/subscriptions/details/details.html
@@ -1,4 +1,4 @@
-{{ component('components:segment-title',{ title: title, icon: icon }) }}
+{{ component('semantic~segment-title',{ title: title, icon: icon }) }}
 {% if uuid is empty %}
 <div class="ui message">   
     <p>
