--- a/view/components/admin/subscriptions/subscriptions.html
+++ b/view/components/admin/subscriptions/subscriptions.html
@@ -3,7 +3,7 @@
     { id: 'details_tab', title: labels.details, component: 'subscriptions::admin.subscriptions.details', icon: 'info' }
 ] %}
 
-{{  component('components:tabs.vertical',{ 
+{{  component('semantic~tabs.vertical',{ 
         items: items, 
         menu: { id: 'subscriptions_menu' }, 
         item_class: 'subscription-tab-item',
