--- a/view/components/admin/subscriptions/view/view.html
+++ b/view/components/admin/subscriptions/view/view.html
@@ -6,7 +6,7 @@
     </div>
     <div class="two wide column right floated">  
         <div class="ui segment right aligned">     
-        {{ component('components:paginator.dropdown',{ namespace: 'subscriptions' }) }}
+        {{ component('semantic~paginator.dropdown',{ namespace: 'subscriptions' }) }}
         </div>
     </div>
 </div>
@@ -28,5 +28,5 @@
     </tbody>
 </table> 
 <div id="paginator">      
-    {{ component("components:paginator",{ namespace: 'subscriptions' }) }}
+    {{ component("semantic~paginator",{ namespace: 'subscriptions' }) }}
 </div>
