--- a/view/components/admin/provider/details/details.html
+++ b/view/components/admin/provider/details/details.html
@@ -1,4 +1,4 @@
-{{ component('components:segment-title',{ title: title, icon: 'info' }) }}
+{{ component('semantic~segment-title',{ title: title, icon: 'info' }) }}
 {% set driver_name = getOption('subscriptions.driver') %}
 {% set driver = service('driver').create(driver_name) %}
 {% set result = driver.plan().getDetails(plan_id) %}
