--- a/view/components/admin/settings/settings.html
+++ b/view/components/admin/settings/settings.html
@@ -25,7 +25,7 @@
 ] %}
 
 {% if demo_mode != true %}
-{{  component('components:tabs.vertical',{ 
+{{  component('semantic~tabs.vertical',{ 
         items: items, 
         menu: { id: 'settings_menu' }, 
         item_class: 'settings-tab-item',
