--- a/view/pages/index.html
+++ b/view/pages/index.html
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
-<html>
-    {{  component('components:head',{
-            library_files: library_files,
-            template_files: template_files,
-            page_files: page_files,
-            component_files: component_files, 
-            language: language,
-            head: head           
-        })
-    }}
+<html lang="{{ current_language|default('en') }}">       
+    {% component 'semantic~head' type 'html' %}
+    {# Custom head content #}    
+    {% endcomponent %}
     <body id="page">
-        {{ body|raw }}
+        {{ body|raw }}    
     </body>
 </html>
