--- a/view/components/admin/subscriptions/subscriptions.html
+++ b/view/components/admin/subscriptions/subscriptions.html
@@ -1,11 +1,8 @@
-{% set items = [ 
-    { title: labels.view, component: 'subscriptions::admin.subscriptions.view', icon: 'list', active: true },
-    { id: 'details_tab', title: labels.details, component: 'subscriptions::admin.subscriptions.details', icon: 'info' },
-    { id: 'add_subscription_tab', title: labels.add, component: 'subscriptions::admin.subscriptions.add', icon: 'plus' }
-] %}
-
 {{  component('semantic~tabs.vertical',{ 
-        items: items, 
+        items: [ 
+            { title: labels.view, component: 'subscriptions::admin.subscriptions.view', icon: 'list', active: true },
+            { id: 'add_subscription_tab', title: labels.add, component: 'subscriptions::admin.subscriptions.add', icon: 'plus' }
+        ], 
         menu: { id: 'subscriptions_menu' }, 
         item_class: 'subscription-tab-item',
         content: { 
