--- a/view/components/admin/plans/features/edit/edit.html
+++ b/view/components/admin/plans/features/edit/edit.html
@@ -1,6 +1,6 @@
 {% component 'semantic~tabs.vertical.content' %}
     {% set class = 'sixteen wide column' %}  
-    {% set panel_class = '' %}
+    {% set panel_class = 'ui segment' %}
     <div class="mt-4">
         {{ component('subscriptions::admin.plans.features.form',{ uuid: uuid }) }}
     </div>       
