--- a/view/components/admin/plans/plans.html
+++ b/view/components/admin/plans/plans.html
@@ -1,11 +1,9 @@
-{% set items = [ 
-    { title: labels.view, component: 'subscriptions::admin.plans.view', icon: 'list', active: true },
-    { title: labels.add, component: 'subscriptions::admin.plans.add', icon: 'plus' },
-    { id:'edit_plan', title: labels.edit, component: 'subscriptions::admin.plans.edit', icon: 'edit' }
-] %}
-
 {{  component('semantic~tabs.vertical',{ 
-        items: items, 
+        items: [ 
+            { title: labels.view, component: 'subscriptions::admin.plans.view', icon: 'list', active: true },
+            { title: labels.add, component: 'subscriptions::admin.plans.add', icon: 'plus' },
+            { id:'edit_plan', title: labels.edit, component: 'subscriptions::admin.plans.edit', icon: 'edit' }
+        ], 
         menu: { id: 'subscription_plan_menu' }, 
         item_class: 'subscription-plan-item',
         content: { 
