--- a/view/components/admin/subscriptions/view/view.html
+++ b/view/components/admin/subscriptions/view/view.html
@@ -18,7 +18,7 @@
                 <th class="one wide collapsing left aligned">{{ columns.action }}</th>
                 <th class="two wide">{{ columns.created }}</th> 
                 <th class="two wide">{{ columns.expire }}</th>          
-                <th class="collapsing one wide">{{ columns.status }}</th>
+                <th class="two wide">{{ columns.status }}</th>
                 <th>{{ columns.plan }}</th>   
                 <th class="two wide">{{ columns.billing_date }}</th>   
                 <th class="two wide">{{ columns.user }}</th>               
