--- a/view/components/admin/plans/view/rows/rows.html
+++ b/view/components/admin/plans/view/rows/rows.html
@@ -6,16 +6,17 @@
 {% endif %}
 {% for item in items %}  
     <tr id="row_{{ item.uuid }}">              
-        <td>             
+        <td>     
+            <button class="ui icon mini basic button details-button" uuid="{{ item.uuid }}" title="{{ labels.details }}">
+                <i class="icon info"></i>
+            </button>          
             {% if demo_mode != true %}
-            <div class="ui buttons">        
                 <button class="ui icon mini basic button edit-button" uuid="{{ item.uuid }}" title="{{ labels.edit }}">
                     <i class="icon edit"></i>
                 </button>     
                 <button class="ui icon mini basic button delete-button" uuid="{{ item.uuid }}" {{ labels.delete|attr('title') }} data-title="{{ item.title }}">
                     <i class="icon trash orange"></i>
-                </button>  
-            </div>                  
+                </button>              
             {% else %}
             <div class="ui basic red label">{{ labels.demo }}</div>
             {% endif %}           
