--- a/view/components/admin/plans/add/add.html
+++ b/view/components/admin/plans/add/add.html
@@ -1,4 +1,4 @@
-{% component 'semantic~tabs.vertical.content' %}
+{% component 'semantic~panel' %}
 <div class="mt-4">
     {{ component('subscriptions::admin.plans.form') }}
 </div>       
