--- a/view/components/admin/plans/features/type/list/list.html
+++ b/view/components/admin/plans/features/type/list/list.html
@@ -1,12 +1,20 @@
-{% set features = createModel('SubscriptionPlanFeatures','subscriptions').planFeaturesQuery(plan_id) %}
-{% set features = features.get() %}
+{% set features = createModel('PlanFeatureTypes','subscriptions').get() %}
 {% for feature in features %}
     <div class="item" id="row_{{ feature.uuid }}">
         <div class="content">
-            <button class="ui mini button basic compact icon edit-feature" title="{{ labels.edit }}" uuid="{{ feature.uuid }}">
+            <button 
+                mountTo="feature_type_content"
+                component="subscriptions::admin.plans.features.type.edit"
+                params="uuid:{{ feature.uuid }}"
+                class="ui mini button basic compact icon edit-feature-type" 
+                title="{{ labels.edit }}" 
+                uuid="{{ feature.uuid }}">
                 <i class="icon edit"></i>
             </button>
-            <button class="ui mini button basic compact icon delete-feature" title="{{ labels.delete }}" uuid="{{ feature.uuid }}">
+            <button    
+                class="ui mini button basic compact icon delete-feature-type" 
+                title="{{ labels.delete }}" 
+                uuid="{{ feature.uuid }}">
                 <i class="icon trash orange"></i>
             </button>
             {{ feature.title }}
